<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_signup"
    tools:context="net.itempire.donateblood.SignupActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                android:hint="@string/hint_name"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnGender">
            </Spinner>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAge"
                android:hint="@string/hint_age">
            </EditText>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnBloodGroup">
            </Spinner>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPhoneNumber"
                android:hint="@string/hint_phone"
                android:inputType="phone"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnCity">
            </Spinner>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRepeatPassword"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignup"
                android:background="@color/colorPrimaryDark"
                android:text="@string/txt_signup"
                android:layout_marginBottom="16dp"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAlreadyRegistered"
                android:text="@string/txt_already_registered"
                android:gravity="center"
                android:layout_marginTop="16sp"
                android:textColor="@color/colorSecondaryText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:layout_marginTop="16dp"
                android:text="@string/txt_login"
                android:background="@drawable/border"
                android:textColor="@color/colorPrimaryTextLight"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
