<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDonorName"
        android:layout_weight="1"
        android:text="@string/temp_name"
        android:textSize="17sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDonorThanks"
        android:layout_weight="1"
        android:text="@string/temp_age"
        android:textSize="17sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDonorCity"
        android:layout_weight="1"
        android:text="@string/temp_city"
        android:textSize="17sp"/>
</LinearLayout>