<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:background="@drawable/bg"
    android:padding="16dp"
    android:weightSum="4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.itempire.donateblood.LoginActivity"
    tools:showIn="@layout/app_bar_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/layoutLogo"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLogo"
            android:src="@drawable/logo"
            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_below="@id/layoutLogo"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_below="@id/etEmail"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_below="@id/etPassword"
        android:text="@string/txt_login"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvForgotPassword"
        android:text="@string/txt_forgotPassword"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/btnLogin"
        android:paddingTop="5dp"
        android:layout_alignRight="@id/btnLogin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignup"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_signup"
        android:layout_marginTop="50dp"
        android:background="@drawable/border"
        android:textColor="@color/colorPrimary"
        />
</RelativeLayout>