<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutBloodGroupScreen"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutBloodGroupWrap"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRequiredBloodGroup"
            android:text="@string/txt_required_blood"
            android:textColor="@color/colorPrimaryText"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:textSize="20sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutBloodA"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_a"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_bottom"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_aN"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:background="@drawable/border_bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutBloodB"
                android:layout_below="@id/layoutBloodA"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_b"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_bottom"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_bN"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:background="@drawable/border_bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutBloodO"
                android:layout_below="@id/layoutBloodB"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_o"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_bottom"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_oN"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:background="@drawable/border_bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutBloodAB"
                android:layout_below="@id/layoutBloodO"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_ab"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_bottom"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_abN"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/tint"
                    android:background="@drawable/border_bottom"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>