<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvRequiredBloodGroup"
        android:text="@string/txt_featured_donors"
        android:textColor="@color/colorPrimaryText"
        android:gravity="center"
        android:paddingBottom="10sp"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutHeading"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeadingName"
            android:layout_weight="1"
            android:text="@string/heading_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeadingAge"
            android:layout_weight="1"
            android:text="@string/heading_thanks"
            android:textColor="@color/colorPrimaryText"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeadingCity"
            android:layout_weight="1"
            android:text="@string/heading_city"
            android:textColor="@color/colorPrimaryText"
            android:textSize="17sp"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvFeaturedDonors"
        tools:listitem="@layout/featured_donor_row"/>

</LinearLayout>
